--- a/src/pug/layouts/master.pug
+++ b/src/pug/layouts/master.pug
@@ -3,7 +3,7 @@ doctype html
 html
     head
         block title
-            title Hobie Dev Sandbox
+            title Sandbox
         meta(name="viewport", content="width=device-width, initial-scale=1")
         link(rel="stylesheet", href="css/styles.css")
         link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Playfair+Display|Montserrat")
