--- a/src/pug/layouts/master.pug
+++ b/src/pug/layouts/master.pug
@@ -5,7 +5,7 @@ html
         block title
             title Sandbox
         meta(name="viewport", content="width=device-width, initial-scale=1")
-        link(rel="stylesheet", href="css/styles.css")
+        link(rel="stylesheet", href="css/styles.min.css")
         link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Playfair+Display|Montserrat")
 
     block body
