upgrade gulp to v4

--- a/src/scss/molecules/_flexcards.scss
+++ b/src/scss/molecules/_flexcards.scss
@@ -16,7 +16,7 @@ $flexcard_txtColor:     #222;
         margin-bottom: -0.1em;
     }
     h1 {
-        margin: 0 0 0.5em;
+        margin: 0 2em;
     }
     p {
         font-size: 0.875em;
