--- a/src/pug/pages/flexcards.pug
+++ b/src/pug/pages/flexcards.pug
@@ -6,7 +6,7 @@ block title
 block body
     body.flexcards_page
         article
-            h1 Flexbox Cards
+            h1 Flexbox SWEET
             ul.flexcards
                 - var buttons = false
                 +flexCard('video','First','http://unsplash.it/320/240/?image=32', '#', 'Go')
