--- a/src/scss/layout/_home.scss
+++ b/src/scss/layout/_home.scss
@@ -4,6 +4,7 @@
 #main_menu {
     padding: 3em;
     h1 {
+        font-size: 200%;
         text-align: center;
         &:after {
             position: relative;
