--- a/src/pug/layouts/master.pug
+++ b/src/pug/layouts/master.pug
@@ -7,5 +7,6 @@ html
         meta(name="viewport", content="width=device-width, initial-scale=1")
         link(rel="stylesheet", href="css/styles.min.css")
         link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Playfair+Display|Montserrat")
+        link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
 
     block body
