--- a/src/pug/pages/metro.pug
+++ b/src/pug/pages/metro.pug
@@ -9,7 +9,7 @@ block body
       .container
         .nav-left
           a.nav-item(href='../index.html')
-            img(src='../img/gulp.png', alt='Description')
+            img(src='img/gulp.png', alt='Description')
         span.nav-toggle
           span
           span
@@ -85,5 +85,5 @@ block body
               .content
                 // Content
                 // Uncomment if you want to use a container </div>
-    script(type='text/javascript', src='../js/bulma.js')
+    script(type='text/javascript', src='../js/app.js')
 
